--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=%REACT_APP_KAKAOMAP_API_KEY%"></script>
-    <title>MODAK</title>
+    <title>MoDak</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
